# Macbook_RAG

./: .gitignore  DECISIONS.md  README.md  chunker.py  config.py  decisions.md  embedder.py  generator.py  ingest.py  loader.py  mac-rag source of truth.md  main.py  pyproject.toml  requirements.txt  retrieval.py  retriever.py  vectorstore.py
.github/workflows/: ci.yml
clirag/: __init__.py  chunker.py  config.py  embedder.py  generator.py  ingest.py  lc.py  loader.py  models.py  query.py  retriever.py  vectorstore.py
data/: corpus_manifest.json
data/raw/: man_ar.txt  man_arp.txt  man_awk.txt  man_basename.txt  man_bunzip2.txt  man_cal.txt  man_cat.txt  man_chgrp.txt  man_chmod.txt  man_chown.txt  man_clang.txt  man_cmp.txt  man_col.txt  man_comm.txt  man_compress.txt  man_cp.txt  man_cpio.txt  man_curl.txt  man_cut.txt  man_date.txt  man_dd.txt  man_df.txt  man_diff.txt  man_dig.txt  man_diskutil.txt  man_du.txt  man_env.txt  man_fd.txt  man_fgrep.txt  man_file.txt  man_find.txt  man_fmt.txt  man_fold.txt  man_ftp.txt  man_git.txt  man_grep.txt  man_gzip.txt  man_head.txt  man_host.txt  man_hostname.txt  (+76 more)
evals/: retrieval_eval.py  run_eval.py
evals/golden/: golden_set.jsonl
evals/results/: experiments.jsonl
scripts/: harvest_manpages.py  manpage_candidates.txt
tests/: test_chunker.py  test_embedder.py  test_generator.py  test_loader.py  test_retrieval_eval.py  test_retriever.py  test_vectorstore.py
